<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_access_alarm_24"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_resume"
        android:icon="@drawable/ic_baseline_play_circle_outline_24"
        android:title="@string/title_resume" />
    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_video_label_black_24dp"
        android:title="Series" />
    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />


</menu>
